@startuml Diagrama_Relacional_Clinica
hide circle
skinparam linetype ortho

entity "usuarios" as usuarios {
  * **id_usuario** : INT <<PK>>
  --
  nombre : VARCHAR(100)
  correo : VARCHAR(150)
  usuario : VARCHAR(50)
  contrasena : VARCHAR(255)
  rol : ENUM('administrador', 'veterinario')
  activo : BOOLEAN
  fecha_creacion : DATETIME
}

entity "veterinarios" as veterinarios {
  * **id_veterinario** : INT <<PK>>
  --
  * **id_usuario** : INT <<FK>>
  especialidad : VARCHAR(100)
  telefono : VARCHAR(20)
  licencia_medica : VARCHAR(50)
}

entity "propietarios" as propietarios {
  * **id_propietario** : INT <<PK>>
  --
  nombre_completo : VARCHAR(150)
  direccion : TEXT
  telefono : VARCHAR(20)
  correo : VARCHAR(150)
  fecha_registro : DATETIME
}

entity "mascotas" as mascotas {
  * **id_mascota** : INT <<PK>>
  --
  * **id_propietario** : INT <<FK>>
  nombre : VARCHAR(100)
  especie : VARCHAR(50)
  raza : VARCHAR(50)
  sexo : ENUM('Macho', 'Hembra')
  fecha_nacimiento : DATE
  caracteristicas_relevantes : TEXT
  fecha_registro : DATETIME
}

entity "servicios" as servicios {
  * **id_servicio** : INT <<PK>>
  --
  nombre_servicio : VARCHAR(100)
  descripcion : TEXT
  duracion_estimada_min : INT
  activo : BOOLEAN
}

entity "horarios_atencion" as horarios_atencion {
  * **id_horario** : INT <<PK>>
  --
  * **id_veterinario** : INT <<FK>>
  dia_semana : INT
  hora_inicio : TIME
  hora_fin : TIME
}

entity "citas" as citas {
  * **id_cita** : INT <<PK>>
  --
  * **id_mascota** : INT <<FK>>
  * **id_veterinario** : INT <<FK>>
  * **id_servicio** : INT <<FK>>
  fecha_cita : DATE
  hora_cita : TIME
  estado : ENUM('Programada', 'Atendida', 'Cancelada')
  motivo_cancelacion : TEXT
  fecha_creacion : DATETIME
}

entity "consultas_veterinarias" as consultas_veterinarias {
  * **id_consulta** : INT <<PK>>
  --
  * **id_cita** : INT <<FK>>
  * **id_mascota** : INT <<FK>>
  * **id_veterinario** : INT <<FK>>
  fecha_atencion : DATETIME
  diagnostico : TEXT
  observaciones : TEXT
  tratamiento : TEXT
  servicios_adicionales : TEXT
}

entity "historial_mascota" as historial_mascota {
  * **id_historial_mascota** : INT <<PK>>
  --
  * **id_mascota** : INT <<FK>>
  consulta_previa : DATE
  vacunas_colocadas : VARCHAR(100)
  fecha_vacunas : DATE
  nombre_medicamento : VARCHAR(100)
}

' Relaciones entre tablas
usuarios ||--o| veterinarios : "1:1"
propietarios ||--|{ mascotas : "1:N"
veterinarios ||--|{ horarios_atencion : "1:N"
mascotas ||--|{ citas : "1:N"
veterinarios ||--|{ citas : "1:N"
servicios ||--|{ citas : "1:N"
citas ||--o| consultas_veterinarias : "1:1"
mascotas ||--|{ historial_mascota : "1:N"

@enduml
